# medical-api

./: .gitignore  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/v1/routers/: appointment_routes.py  configure.py  token_routes.py  user_routes.py
app/core/: __init__.py  cli.py  default.toml  exceptions.py  logger.py  main.py  middlewares.py  security.py  settings.py
app/core/config/: default.toml  settings.toml
app/core/databases/: postgres.py
app/core/security/: auth.py  security.py
app/databases/: postgres.py
app/models/: __init__.py  address.py  appointment.py  doctor.py  patient.py  user.py  utils.py
app/repositories/: appointment_repository.py  base_repositories.py  user_repository.py
app/repository/: base_repositories.py  shared_functions.py  user_repository.py
app/schemas/: appointment_schemas.py  user_schemas.py
app/services/: appointment_service.py  user_service.py
app/types/: address.py  user.py
app/utils/: decorators.py  functions.py
docker/: api.dockerfile  api_test.dockerfile  postgres.dockerfile
docs/: README.md
migrations/: env.py
migrations/versions/: 4ba3bb48b7df_add_hashed_password_user_field.py  7910ea212366_rename_hashed_password_to_password.py  92c5951b5953_user_and_address_tables.py  aca7a906c87c_add_doctor_appointment_and_patient_.py  c1829d729063_add_is_deleted_field_to_all_tables.py  f9a075aca5a0_fix_timestamp_with_no_tz_in_address_and_.py
tests/: conftest.py  test_auth_service.py  test_security.py  test_types.py  test_user.py  test_user_repository.py  test_user_schemas.py  test_user_service.py  tests.py  util_functions.py
tests/appointment/: test_appointment_repository.py  test_appointment_service.py  test_appointments_routes.py
tests/user/: test_user_repository.py  test_user_routes.py  test_user_schemas.py  test_user_service.py
